<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/header"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="40sp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_marginTop="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.03"
            android:text="@string/sign_in_to_continue"
            android:textColor="#FFB90B"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="25dp"
            android:text="@string/login"
            android:textColor="#ad168b"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="35dp"
            android:text="@string/email"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/box"
            android:minHeight="48dp"
            android:text="@string/enter_the_email" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="35dp"
            android:text="@string/password"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/box"
            android:minHeight="48dp"
            android:text="@string/enter_the_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:text="@string/forget_password"
            android:textColor="#ad168b"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="30dp"
            app:backgroundTint="@null"
            android:background="@drawable/button"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:minHeight="48dp"
            android:onClick="register"
            android:text="@string/don_t_hv_an_acoount_create_new"
            android:textColor="#AD168B"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>