<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Reg_page">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/header"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:textColor="#fff"
            android:textSize="35sp"
            android:layout_marginTop="50dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="#B70DD5"
            android:textSize="25sp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="15dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mail_id"
            android:textColor="#B70DD5"
            android:textSize="25sp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="15dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="#B70DD5"
            android:textSize="25sp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="15dp"
            />
        <Button
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            app:backgroundTint="@null"
            android:background="@drawable/button"
            android:text="@string/signup"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:layout_marginStart="35dp"
            android:layout_marginTop="60dp"/>

    </LinearLayout>





</LinearLayout>